--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,6 +10,7 @@
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.postprocessing": "3.4.0",
     "com.unity.test-framework": "1.1.33",
+    "com.unity.toolchain.linux-x86_64": "2.0.9",
     "com.unity.ugui": "1.0.0",
     "com.whisper.unity": "https://github.com/Macoron/whisper.unity.git?path=/Packages/com.whisper.unity",
     "com.unity.modules.ai": "1.0.0",
